--- a/labs/lab3/src/styles.css
+++ b/labs/lab3/src/styles.css
@@ -105,6 +105,7 @@
     gap: 0.5em;
     align-items: left;
     flex-direction: column;
+    justify-content: space-between;
     position: fixed;
     top: 30%;
     left: 40%;
@@ -116,6 +117,19 @@
     border-color: rgba(45, 76, 123);
     font-weight: 600;
     z-index: 2;
+}
+#favorite-rating-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#film-rating {
+    width: 30%;
+}
+#film-fav {
+    width: 1em;
+    height: 1em;
 }
 .form-input-style {
     border-style: solid;
@@ -160,10 +174,6 @@
     text-align: left;
     font-weight: 500;
     background-color: transparent;
-}
-.sidebar-button:hover {
-    background-color: rgb(5, 92, 157);
-    color: white;
 }
 .sidebar-button.button-active {
     background-color: rgb(5, 92, 157);
